[package]
name = "credence_treasury"
version = "0.1.0"
edition = "2021"
description = "Credence treasury — protocol fees, slashed funds, multi-sig withdrawals"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0"
credence_errors = { path = "../credence_errors" }
ethnum = { version = "1.5.2", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
proptest = "1.11.0"
